# ray-rust-test

./: .bazelrc  .gitignore  Dockerfile.rust-ffi  Dockerfile.test  WORKSPACE  context3.md
.buildkite/: build.rayci.yml
bazel/: cxx_bridge.bzl  ray_deps_rust.bzl  rust.bzl
ci/ray_ci/: BUILD.bazel  supported_images.py
docs/: rust-ffi-implementation.md
python/ray/data/_internal/: util.py
python/ray/data/_internal/execution/interfaces/: op_runtime_metrics.py  physical_operator.py
python/ray/data/_internal/execution/operators/: actor_pool_map_operator.py  map_operator.py  zip_operator.py
python/ray/data/_internal/iterator/: stream_split_iterator.py
python/ray/data/tests/: test_resource_manager.py
scripts/: validate_rust_ffi.sh
src/ray/ffi/: BUILD.bazel  rust_allocator.h  rust_asio_chaos.h  rust_bundle_location_index.h  rust_cgroup.h  rust_cgroup_manager.h  rust_cmd_line_utils.h  rust_container_util.h  rust_counter_map.h  rust_event_stats.h  rust_fallback_strategy.h  rust_filesystem.h  rust_grpc_util.h  rust_id.cc  rust_id.h  rust_label_selector.h  rust_lifecycle.h  rust_memory_monitor.h  rust_plasma.h  rust_ray_config.h  rust_scheduling.h  rust_scoped_env_setter.h  rust_shared_lru.h  rust_source_location.h  rust_spilled_object.h  rust_status.cc  rust_status.h  rust_status_or.h  rust_thread_checker.h  rust_util.h
src/ray/ffi/tests/: BUILD.bazel  rust_allocator_test.cc  rust_asio_chaos_test.cc  rust_bundle_location_index_test.cc  rust_cgroup_manager_test.cc  rust_cgroup_test.cc  rust_cmd_line_utils_test.cc  rust_container_util_test.cc  rust_counter_map_test.cc  rust_event_stats_test.cc  rust_eviction_policy_test.cc  rust_fallback_strategy_test.cc  rust_ffi_test.cc  rust_filesystem_test.cc  rust_grpc_util_test.cc  rust_id_test.cc  rust_label_selector_test.cc  rust_lifecycle_test.cc  rust_memory_monitor_test.cc  rust_plasma_test.cc  rust_ray_config_test.cc  rust_resource_instance_set_test.cc  rust_resource_request_test.cc  rust_resource_set_test.cc  rust_scheduling_ids_test.cc  rust_scoped_env_setter_test.cc  rust_shared_lru_test.cc  rust_source_location_test.cc  rust_spilled_object_test.cc  rust_stats_collector_test.cc  rust_status_or_test.cc  rust_status_test.cc  rust_thread_checker_test.cc  rust_util_test.cc
src/ray/rust/: BUILD.bazel  Cargo.toml  README.md
src/ray/rust/ray-common/: BUILD.bazel  Cargo.toml
src/ray/rust/ray-common/src/: config.rs  id.rs  lib.rs  scheduling.rs  status.rs
src/ray/rust/ray-ffi/: BUILD.bazel  Cargo.toml  build.rs
src/ray/rust/ray-ffi/src/: callbacks.rs  lib.rs
src/ray/rust/ray-ffi/src/common/: allocator.rs  asio_chaos.rs  bundle_location_index.rs  cgroup.rs  cgroup_manager.rs  cmd_line_utils.rs  container_util.rs  counter_map.rs  event_stats.rs  fallback_strategy.rs  filesystem.rs  grpc_util.rs  id.rs  label_selector.rs  lifecycle.rs  memory_monitor.rs  mod.rs  plasma.rs  ray_config.rs  scheduling.rs  scoped_env_setter.rs  shared_lru.rs  source_location.rs  spilled_object.rs  status.rs  status_or.rs  thread_checker.rs  util.rs
src/ray/rust/ray-object-manager/: BUILD.bazel  Cargo.toml
src/ray/rust/ray-object-manager/src/: lib.rs
src/ray/rust/ray-object-manager/src/plasma/: allocator.rs  common.rs  eviction.rs  lifecycle.rs  mod.rs  stats.rs  store.rs
src/ray/rust/ray-object-manager/tests/: integration_test.rs
src/ray/rust/ray-test-utils/: BUILD.bazel  Cargo.toml
src/ray/rust/ray-test-utils/src/: lib.rs
