# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:ray.bzl", "ray_cc_library")
load("//bazel:cxx_bridge.bzl", "ray_cxx_bridge")

package(default_visibility = ["//visibility:public"])

# CXX bridge for Status type
ray_cxx_bridge(
    name = "status_bridge",
    src = "//src/ray/rust/ray-ffi:src/common/status.rs",
)

# CXX bridge for ID types
ray_cxx_bridge(
    name = "id_bridge",
    src = "//src/ray/rust/ray-ffi:src/common/id.rs",
)

# C++ wrapper for Rust Status implementation
ray_cc_library(
    name = "rust_status",
    srcs = ["rust_status.cc"],
    hdrs = ["rust_status.h"],
    deps = [
        ":status_bridge",
        "//src/ray/rust/ray-ffi:ray_ffi_static",
        "@crate_index//:cxx",
    ],
)

# C++ wrapper for Rust ID implementations
ray_cc_library(
    name = "rust_id",
    srcs = ["rust_id.cc"],
    hdrs = ["rust_id.h"],
    deps = [
        ":id_bridge",
        "//src/ray/rust/ray-ffi:ray_ffi_static",
        "@crate_index//:cxx",
    ],
)

# Combined FFI library for convenience
ray_cc_library(
    name = "ray_rust_ffi",
    deps = [
        ":rust_id",
        ":rust_status",
    ],
)
