# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
resolver = "2"
members = [
    "ray-common",
    "ray-ffi",
    "ray-test-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Ray Authors"]
license = "Apache-2.0"
repository = "https://github.com/ray-project/ray"

[workspace.dependencies]
# Core dependencies
cxx = "1.0"
cxx-build = "1.0"
thiserror = "1.0"
hex = "0.4"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Testing
rstest = "0.18"

# Internal crates
ray-common = { path = "ray-common" }
ray-ffi = { path = "ray-ffi" }
ray-test-utils = { path = "ray-test-utils" }
