# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:ray.bzl", "ray_cc_test")

package(default_visibility = ["//visibility:public"])

# Test for Rust FFI infrastructure
ray_cc_test(
    name = "rust_ffi_test",
    srcs = ["rust_ffi_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    # Link with pthread needed by Rust runtime
    linkopts = ["-lpthread", "-ldl"],
)
