# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

# Test for Rust Status FFI (matches status_test.cc)
cc_test(
    name = "rust_status_test",
    srcs = ["rust_status_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ID FFI (matches id_test.cc)
cc_test(
    name = "rust_id_test",
    srcs = ["rust_id_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust FixedPoint and ResourceId FFI (matches scheduling_ids_test.cc)
cc_test(
    name = "rust_scheduling_ids_test",
    srcs = ["rust_scheduling_ids_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ResourceSet FFI (matches resource_set_test.cc)
cc_test(
    name = "rust_resource_set_test",
    srcs = ["rust_resource_set_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ObjectStore FFI (matches object_store_test.cc)
cc_test(
    name = "rust_object_store_test",
    srcs = ["rust_object_store_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust Eviction Policy FFI (matches eviction_policy_test.cc)
cc_test(
    name = "rust_eviction_policy_test",
    srcs = ["rust_eviction_policy_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ResourceRequest FFI (matches resource_request_test.cc)
cc_test(
    name = "rust_resource_request_test",
    srcs = ["rust_resource_request_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ResourceInstanceSet FFI (matches resource_instance_set_test.cc)
cc_test(
    name = "rust_resource_instance_set_test",
    srcs = ["rust_resource_instance_set_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ObjectLifecycleManager and StatsCollector FFI
cc_test(
    name = "rust_lifecycle_test",
    srcs = ["rust_lifecycle_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust PlasmaAllocator FFI (matches fallback_allocator_test.cc)
cc_test(
    name = "rust_allocator_test",
    srcs = ["rust_allocator_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust StatusOr FFI (matches status_or_test.cc)
cc_test(
    name = "rust_status_or_test",
    srcs = ["rust_status_or_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust Utility FFI (matches exponential_backoff_test.cc, string_utils_test.cc, size_literals_test.cc)
cc_test(
    name = "rust_util_test",
    srcs = ["rust_util_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust SharedLruCache FFI (matches shared_lru_test.cc)
cc_test(
    name = "rust_shared_lru_test",
    srcs = ["rust_shared_lru_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust Filesystem FFI (matches filesystem_test.cc)
cc_test(
    name = "rust_filesystem_test",
    srcs = ["rust_filesystem_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust SourceLocation FFI (matches source_location_test.cc)
cc_test(
    name = "rust_source_location_test",
    srcs = ["rust_source_location_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust EventStats FFI (matches event_stats_test.cc)
cc_test(
    name = "rust_event_stats_test",
    srcs = ["rust_event_stats_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust RayConfig FFI (matches ray_config_test.cc)
cc_test(
    name = "rust_ray_config_test",
    srcs = ["rust_ray_config_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust CounterMap FFI (matches counter_test.cc)
cc_test(
    name = "rust_counter_map_test",
    srcs = ["rust_counter_map_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust MemoryMonitor FFI (matches memory_monitor_utils_test.cc)
cc_test(
    name = "rust_memory_monitor_test",
    srcs = ["rust_memory_monitor_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust LabelSelector FFI (matches label_selector_test.cc)
cc_test(
    name = "rust_label_selector_test",
    srcs = ["rust_label_selector_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust FallbackStrategy FFI (matches fallback_strategy_test.cc)
cc_test(
    name = "rust_fallback_strategy_test",
    srcs = ["rust_fallback_strategy_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust gRPC Util FFI (matches grpc_util_test.cc)
cc_test(
    name = "rust_grpc_util_test",
    srcs = ["rust_grpc_util_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust BundleLocationIndex FFI (matches bundle_location_index_test.cc)
cc_test(
    name = "rust_bundle_location_index_test",
    srcs = ["rust_bundle_location_index_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ScopedEnvSetter FFI (matches scoped_env_setter_test.cc)
cc_test(
    name = "rust_scoped_env_setter_test",
    srcs = ["rust_scoped_env_setter_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ThreadChecker FFI (matches thread_checker_test.cc)
cc_test(
    name = "rust_thread_checker_test",
    srcs = ["rust_thread_checker_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust CmdLineUtils FFI (matches cmd_line_utils_test.cc)
cc_test(
    name = "rust_cmd_line_utils_test",
    srcs = ["rust_cmd_line_utils_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust ContainerUtil FFI (matches container_util_test.cc)
cc_test(
    name = "rust_container_util_test",
    srcs = ["rust_container_util_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust StatsCollector FFI (matches stats_collector_test.cc)
cc_test(
    name = "rust_stats_collector_test",
    srcs = ["rust_stats_collector_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust SpilledObject FFI (matches spilled_object_test.cc - partial)
cc_test(
    name = "rust_spilled_object_test",
    srcs = ["rust_spilled_object_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust AsioChaos FFI (matches asio_defer_test.cc)
cc_test(
    name = "rust_asio_chaos_test",
    srcs = ["rust_asio_chaos_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust Cgroup FFI (matches sysfs_cgroup_driver_test.cc)
cc_test(
    name = "rust_cgroup_test",
    srcs = ["rust_cgroup_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)

# Test for Rust CgroupManager FFI (matches cgroup_manager_test.cc)
cc_test(
    name = "rust_cgroup_manager_test",
    srcs = ["rust_cgroup_manager_test.cc"],
    deps = [
        "//src/ray/ffi:ray_rust_ffi",
        "@com_google_googletest//:gtest",
    ],
    linkstatic = True,
    linkopts = [
        "-lpthread",
        "-ldl",
        "-lm",
    ],
)
