# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:rust.bzl", "ray_rust_library", "ray_rust_test")

package(default_visibility = ["//visibility:public"])

ray_rust_library(
    name = "ray_common",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "ray_common",
    deps = [
        "@crate_index//:hex",
        "@crate_index//:rand",
        "@crate_index//:serde",
        "@crate_index//:thiserror",
    ],
)

ray_rust_test(
    name = "ray_common_test",
    crate = ":ray_common",
    deps = [
        "@crate_index//:rstest",
    ],
)
