# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ray-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common types and utilities for Ray Rust implementation"

[dependencies]
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
