# Copyright 2017 The Ray Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:rust.bzl", "ray_rust_library", "ray_rust_shared_library", "ray_rust_test")

package(default_visibility = ["//visibility:public"])

ray_rust_library(
    name = "ray_ffi",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "ray_ffi",
    deps = [
        "//src/ray/rust/ray-common:ray_common",
        "//src/ray/rust/ray-object-manager:ray_object_manager",
        "@crate_index//:cxx",
        "@crate_index//:parking_lot",
        "@crate_index//:tempfile",
    ],
)

# Static library for C++ linking
load("@rules_rust//rust:defs.bzl", "rust_static_library")

rust_static_library(
    name = "ray_ffi_static",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "ray_ffi",
    edition = "2021",
    deps = [
        "//src/ray/rust/ray-common:ray_common",
        "//src/ray/rust/ray-object-manager:ray_object_manager",
        "@crate_index//:cxx",
        "@crate_index//:parking_lot",
        "@crate_index//:tempfile",
    ],
    visibility = ["//visibility:public"],
)

ray_rust_test(
    name = "ray_ffi_test",
    crate = ":ray_ffi",
)

# Export bridge source files for C++ code generation
exports_files([
    "src/common/allocator.rs",
    "src/common/id.rs",
    "src/common/lifecycle.rs",
    "src/common/plasma.rs",
    "src/common/scheduling.rs",
    "src/common/status.rs",
])
